8180587: Assert in layout_helper_log2_element_size(jint) compares bits instead of bytes

Fixed assert to compare log2 element size in bytes.

Reviewed-by: zmajo, kvn